--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "type": "git",
     "url": "https://github.com/ecjs/SimpleJade.git"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jscs": "^0.1.8",
+    "grunt-contrib-jshint": "^0.10.0"
+  },
   "dependencies": {
     "express": "^4.10.0",
     "jade": "^1.7.0"
